--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
-numpy>=1.8.2
-scipy>=0.15.1
+numpy>= 1.8.2
+scipy>=1.0.0
 matplotlib>=1.4.3
-pandas>=0.19
+pandas>=0.21.0
 tpot>=0.11.0
 seaborn==0.9.0
 cloudpickle>=0.6.0
-scikit-learn==0.20.0
+scikit-learn>=0.19.2
 joblib==0.14.0
